wk_taa_taaqa/src/objects/ERP_Order__c.object
<CustomObject>
    <description>Holds core data that is necessary for the ERP and downstream accounting systems. This object does not hold fulfillment or other data necessary for other system actions: license provisioning, printing, commissioning, etc.</description>
    <fields>
        <fullName>ASA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>All-link</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Not IntelliConnect Eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advance_End_Date__c</fullName>
        <label>Advance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_Start_Date__c</fullName>
        <description>Start date of the Contract for an ASA contract.</description>
        <label>Advance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authentication_Type__c</fullName>
        <label>Authentication Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>Refer</fullName>
                </value>
                <value>
                    <fullName>Standard+IP</fullName>
                </value>
                <value>
                    <fullName>IP+Refer</fullName>
                </value>
                <value>
                    <fullName>Standard+Refer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Name__c</fullName>
        <description>Bill To Contact Name</description>
        <inlineHelpText>Bill To Contact Name</inlineHelpText>
        <label>Bill To Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Partner_Number__c</fullName>
        <label>Bill To Partner Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Phone__c</fullName>
        <label>Bill To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_Postal_Code__c</fullName>
        <label>Bill To Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street_1__c</fullName>
        <label>Bill To Street 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street_2__c</fullName>
        <label>Bill To Street 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>End date of the full 1 Year contract. Usually 12months from the start of the contract.</description>
        <label>Annual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Start date of an Annual Contract. This is the start date of the 1 Year full contract.</description>
        <label>Annual Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Cyber_Source_Token__c</fullName>
        <label>Credit Card Cyber Source Token</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration__c</fullName>
        <label>Credit Card Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Master Card</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_X_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer X-Ref</label>
        <referenceTo>Account_X_Reference__c</referenceTo>
        <relationshipLabel>ERP Orders</relationshipLabel>
        <relationshipName>ERP_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_System_Order_ID__c</fullName>
        <description>Order ID / Key in the ERP system</description>
        <inlineHelpText>Order ID / Key in the ERP system</inlineHelpText>
        <label>ERP System Order ID / Key</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Admin_Email__c</fullName>
        <label>IC Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IC_Admin_First_Name__c</fullName>
        <label>IC Admin First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Admin_Last_Name__c</fullName>
        <label>IC Admin Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Admin_Phone__c</fullName>
        <label>IC Admin Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IC_Trial_Account_Number__c</fullName>
        <description>Account Number of the Trial Account in Intelli Connect.</description>
        <label>IC Trial Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDs_to_be_issued__c</fullName>
        <label>IDs to be issued</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_DTN__c</fullName>
        <label>Inventory DTN</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Create_New_Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will track if user chose to create new Bill To at Quote level</description>
        <inlineHelpText>This flag will track if user chose to create new Bill To at Quote level</inlineHelpText>
        <label>Is Create New Bill To?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Create_New_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will track if user chose to create new Ship To</description>
        <inlineHelpText>This flag will track if user chose to create new Ship To</inlineHelpText>
        <label>Is Create New Ship To?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Selected_Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will track if user chose to update selected Bill To</description>
        <inlineHelpText>This flag will track if user chose to update selected Bill To</inlineHelpText>
        <label>Is Update Selected Bill To?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Selected_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will track if user chose to update selected Ship To</description>
        <inlineHelpText>This flag will track if user chose to update selected Ship To</inlineHelpText>
        <label>Is Update Selected Ship To?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MYA_Term_End_Date__c</fullName>
        <formula>IF(  MYA_Term__c == 2,   MYA_Year_2_End_Date__c , IF(  MYA_Term__c == 3 ,  MYA_Year_3_End_Date__c  ,  IF(  MYA_Term__c == 4,  MYA_Year_4_End_Date__c  , MYA_Year_5_End_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MYA Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYA_Term__c</fullName>
        <label>MYA Term</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MYA_Year_2_End_Date__c</fullName>
        <label>MYA Year 2 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYA_Year_2_Start_Date__c</fullName>
        <label>MYA Year 2 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYA_Year_3_End_Date__c</fullName>
        <label>MYA Year 3 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYA_Year_3_Start_Date__c</fullName>
        <label>MYA Year 3 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYA_Year_4_End_Date__c</fullName>
        <label>MYA Year 4 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYA_Year_4_Start_Date__c</fullName>
        <label>MYA Year 4 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MYA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_IDs_allowed__c</fullName>
        <label>Max IDs allowed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_on_Card__c</fullName>
        <label>Name on Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Concurrent_Users__c</fullName>
        <label>Number of Concurrent Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Line_Invoice_Header__c</fullName>
        <label>One Line Invoice Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Submission_Status__c</fullName>
        <description>Value is updated from Order submission process: Submitted means that the order is in transmission to the ERP.
Finalized / Complete means that the ERP accepted the Order and we received an ERP order Key. Order submission failed means retry count or queue timeouts have been exceeded - Manual intervention required for re-submission</description>
        <inlineHelpText>Submission Status across system tiers to ERP system of record.</inlineHelpText>
        <label>Order ERP Submission Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted To ERP</fullName>
                </value>
                <value>
                    <fullName>Finalized / Complete in ERP</fullName>
                </value>
                <value>
                    <fullName>Order Submission Failed</fullName>
                </value>
                <value>
                    <fullName>Ready For Submission</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending ERP Submission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NET 30</fullName>
                </value>
                <value>
                    <fullName>NET 60</fullName>
                </value>
                <value>
                    <fullName>NET 90</fullName>
                </value>
                <value>
                    <fullName>NET 120</fullName>
                </value>
                <value>
                    <fullName>NET 150</fullName>
                </value>
                <value>
                    <fullName>NET 180</fullName>
                </value>
                <value>
                    <fullName>Flex Pay</fullName>
                </value>
                <value>
                    <fullName>MONTHLY</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>QUARTERLY</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>YEARLY - (NET30-180)</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>ERP Orders</relationshipLabel>
        <relationshipName>ERP_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ERP Orders</relationshipLabel>
        <relationshipName>ERP_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>ERP Orders</relationshipLabel>
        <relationshipName>ERP_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Record_Type__c</fullName>
        <label>Quote Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Total__c</fullName>
        <label>Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Type__c</fullName>
        <label>Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-In (OBR)</fullName>
                </value>
                <value>
                    <fullName>Opt-In (Standing Order)</fullName>
                </value>
                <value>
                    <fullName>Opt-Out (CBR)</fullName>
                </value>
                <value>
                    <fullName>Exempt (Manual Renewal)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable (T&amp;C or Non-Sub ONLY)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rush_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box for Rush Orders.</description>
        <inlineHelpText>Additional 25$ is added to the Order total.</inlineHelpText>
        <label>Rush Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ERP Orders</relationshipLabel>
        <relationshipName>ERP_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_DTN__c</fullName>
        <label>Selling DTN</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Name__c</fullName>
        <description>Ship To Contact Name</description>
        <inlineHelpText>Ship To Contact Name</inlineHelpText>
        <label>Ship To Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Partner_Number__c</fullName>
        <label>Ship To Partner Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postal_Code__c</fullName>
        <label>Ship To Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_1__c</fullName>
        <label>Ship To Street 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_2__c</fullName>
        <label>Ship To Street 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2nd Day Delivery</fullName>
                </value>
                <value>
                    <fullName>First Class</fullName>
                </value>
                <value>
                    <fullName>Ground Parcel</fullName>
                </value>
                <value>
                    <fullName>International Air</fullName>
                </value>
                <value>
                    <fullName>Next Day-AM Delivery</fullName>
                </value>
                <value>
                    <fullName>Next Day-PM Delivery</fullName>
                </value>
                <value>
                    <fullName>Shipping Account</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_To_Partner_Number__c</fullName>
        <description>SAP Sold-To Party number for the Customer</description>
        <label>Sold To Partner Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Commission__c</fullName>
        <label>Split Commission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100% selling rep/0% inventory rep</fullName>
                </value>
                <value>
                    <fullName>80% selling rep/20% inventory rep</fullName>
                </value>
                <value>
                    <fullName>50% selling rep/50% inventory rep</fullName>
                </value>
                <value>
                    <fullName>20% selling rep/80% inventory rep</fullName>
                </value>
                <value>
                    <fullName>0% selling rep/100% inventory rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stub_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates a stub period for subscription durations,</description>
        <label>Stub Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stub_Year_End_Date__c</fullName>
        <label>Stub Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stub_Year_Start_Date__c</fullName>
        <description>Start date of the Stub Year.</description>
        <label>Stub Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UseOrderTriggerCallout__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box only to cause trigger invoke to make callout. If you select box then You will not see result(Response data).</inlineHelpText>
        <label>Use Order Trigger Callout</label>
        <type>Checkbox</type>
    </fields>
    <label>ERP Order</label>
    <listViews>
        <fullName>All_ERP_Orders</fullName>
        <columns>Order_Submission_Status__c</columns>
        <columns>NAME</columns>
        <columns>ERP_System_Order_ID__c</columns>
        <columns>Price_List__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Proposal__c</columns>
        <columns>Quote_Record_Type__c</columns>
        <columns>Renewal_Type__c</columns>
        <columns>Selling_DTN__c</columns>
        <columns>SFDC_Account__c</columns>
        <columns>Quote_Total__c</columns>
        <columns>UseOrderTriggerCallout__c</columns>
        <columns>Rush_Order__c</columns>
        <columns>Inventory_DTN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All ERP Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Failed_ERP_Orders</fullName>
        <columns>NAME</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Proposal__c</columns>
        <columns>SFDC_Account__c</columns>
        <columns>Customer_X_Ref__c</columns>
        <columns>Price_List__c</columns>
        <columns>Order_Submission_Status__c</columns>
        <columns>ERP_System_Order_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Submission_Status__c</field>
            <operation>equals</operation>
            <value>Order Submission Failed</value>
        </filters>
        <label>Failed ERP Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_2_Days_Orders</fullName>
        <columns>Order_Submission_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>ERP_System_Order_ID__c</columns>
        <columns>Price_List__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Proposal__c</columns>
        <columns>Quote_Record_Type__c</columns>
        <columns>Renewal_Type__c</columns>
        <columns>Selling_DTN__c</columns>
        <columns>Quote_Total__c</columns>
        <columns>Rush_Order__c</columns>
        <columns>Inventory_DTN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Number_of_Concurrent_Users__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>Last 2 Days Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_ERP_Orders</fullName>
        <columns>NAME</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Proposal__c</columns>
        <columns>SFDC_Account__c</columns>
        <columns>Customer_X_Ref__c</columns>
        <columns>Price_List__c</columns>
        <columns>Order_Submission_Status__c</columns>
        <columns>ERP_System_Order_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Submission_Status__c</field>
            <operation>notEqual</operation>
            <value>Finalized / Complete in ERP,Order Submission Failed</value>
        </filters>
        <label>Pending ERP Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todays_Orders</fullName>
        <columns>Order_Submission_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>ERP_System_Order_ID__c</columns>
        <columns>Price_List__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Proposal__c</columns>
        <columns>Quote_Record_Type__c</columns>
        <columns>Renewal_Type__c</columns>
        <columns>Selling_DTN__c</columns>
        <columns>SFDC_Account__c</columns>
        <columns>Quote_Total__c</columns>
        <columns>Rush_Order__c</columns>
        <columns>Inventory_DTN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Orders</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ORD-{00000000}</displayFormat>
        <label>ERP Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>